# qify_backend

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
migrations/2022-02-01-214233_create_posts/: down.sql  up.sql
migrations/2022-02-01-214233_init/: down.sql  up.sql
migrations/2022-02-10-172522_room_id_short/: down.sql  up.sql
migrations/2022-02-16-160225_room_creation_date/: down.sql  up.sql
migrations/2022-02-17-090335_cascade/: down.sql  up.sql
migrations/2022-02-23-095138_song_fields/: down.sql  up.sql
migrations/2022-03-13-211459_actions/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs  service.rs  spotify_api.rs  spotify_models.rs  utils.rs  websocket.rs
src/models/: action.rs  mod.rs  room.rs  song.rs  spotify_api.rs  spotify_id.rs
src/routes/: mod.rs  room.rs  song.rs  spotify.rs
static/: callback.html  index.html  room.html
