[package]
name = "qify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
actix = "0.10"
actix-codec = "0.3"
actix-web = { version = "3", features = ["openssl"] }
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
env_logger = "0.8"
futures = "0.3.1"
bytes = "0.5.3"
r2d2 = "0.8.9"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
